# GPXStats

./: CMakeLists.txt  GPXData.cpp  GPXData.h  GPXList.cpp  GPXList.h  GPXParameter.h  README.md  TESTMTBRide.gpx  TESTShort.gpx  main.cpp
cmake/: FindTinyXML2.cmake
